--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ REACT_APP_RELAY_ADDRESS=0x1C7121c203f4452AE16FcCFCDE9538fA128469F0
 REACT_APP_KAWAII_STORE_ADDRESS=0xcD114f3761A04a100F3188072858C4B5F3bd6F08
 REACT_APP_FACTORY_ADDRESS=0x2683D7C3C37B8Be17990E88E4771e82b4474aE04 
 REACT_APP_KAWAIIVERSE_NFT1155_ADDRESS=0x9655f3fA326E97683353e8b5ed2BCF476D1FF632
+REACT_APP_KAWAII_TOKEN_ADDRESS=0x97071AeD3D4784492dC4e75A6eD3509db408164A
 REACT_APP_BSC_rpcUrls=https://bsc-dataseed1.defibit.io/
 REACT_APP_BSC_CHAIN_ID=97
 REACT_APP_BSC_CHAIN_ID_HEX=0x61
