--- a/.env.evmos
+++ b/.env.evmos
@@ -6,3 +6,4 @@ REACT_APP_BSC_CHAIN_ID=90009000
 REACT_APP_BSC_CHAIN_ID_HEX=0x55d6da8
 REACT_APP_BSC_blockExplorerUrls=https://testnet.bscscan.com/
 REACT_APP_MARKETPLACE_ENDPOINT=https://kawaii-martketplace-api.airight.io
+REACT_APP_KAWAII_TOKEN_ADDRESS=0x8038fA08cC7Df5BA1F0c44E36326A450E8b7243B
