--- a/package.json
+++ b/package.json
@@ -4,46 +4,43 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
-        "@emotion/react": "^11.5.0",
-        "@emotion/styled": "^11.3.0",
-        "@ethersproject/providers": "^5.1.0",
-        "@material-ui/core": "^5.0.0-beta.5",
-        "@material-ui/icons": "^4.11.2",
-        "@mui/icons-material": "^5.5.1",
-        "@mui/material": "^5.0.6",
-        "@reduxjs/toolkit": "^1.6.2",
-        "@testing-library/jest-dom": "^5.16.3",
-        "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@ethersproject/providers": "^5.7.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@mui/icons-material": "^5.10.2",
+        "@mui/material": "^5.10.2",
+        "@reduxjs/toolkit": "^1.8.5",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/walletconnect-connector": "6.2.4",
-        "@web3-react/walletlink-connector": "^6.2.13",
-        "antd": "^4.18.9",
-        "axios": "^0.26.1",
-        "bootstrap": "^5.1.3",
+        "@web3-react/walletlink-connector": "^6.2.14",
+        "antd": "^4.22.7",
+        "axios": "^0.27.2",
+        "bootstrap": "^5.2.0",
         "classnames": "^2.3.1",
-        "eslint-visitor-keys": "^3.3.0",
-        "ipfs-http-client": "^56.0.1",
-        "react": "^18.0.0",
-        "react-bootstrap": "^2.2.3",
-        "react-dom": "^18.0.0",
-        "react-error-overlay": "6.0.9",
-        "react-loading-skeleton": "^3.0.3",
-        "react-redux": "^7.2.6",
-        "react-router-cache-route": "^1.12.5",
+        "ipfs-http-client": "^57.0.3",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.5.0",
+        "react-dom": "^18.2.0",
+        "react-loading-skeleton": "^3.1.0",
+        "react-redux": "^8.0.2",
+        "react-router-cache-route": "^1.12.11",
         "react-router-dom": "5.2.0",
-        "react-scripts": "4.0.3",
-        "react-toastify": "^8.2.0",
-        "sass": "^1.49.9",
-        
-        "web-vitals": "^2.1.4",
-        "web3": "^1.3.6"
+        "react-scripts": "^5.0.1",
+        "react-toastify": "^9.0.8",
+        "sass": "^1.54.5",
+        "web-vitals": "^3.0.0",
+        "web3": "^1.7.5"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -65,6 +62,17 @@
         ]
     },
     "devDependencies": {
-        "firebase-tools": "^10.6.0"
+        "firebase-tools": "^10.6.0",
+        "react-app-rewired": "^2.2.1",
+        "assert": "^2.0.0",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "https-browserify": "^1.0.0",
+        "os-browserify": "^0.3.0",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "tslint": "^6.1.3",
+        "url": "^0.11.0"
     }
 }
